cmake_minimum_required(VERSION 2.8)
project(shutdownd)
add_subdirectory(daemonize)
add_subdirectory(pigpio)
set(CMAKE_C_FLAGS -pthread)
set(CMAKE_EXE_LINKER_FLAGS -pthread)
include_directories( . daemonize pigpio/src)
add_executable(shutdownd shutdownd.c daemon_main.c)
target_link_libraries(shutdownd daemonize pigpio)
